<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oasis_drivers_py</name>
  <version>0.0.1</version>
  <description>Python drivers for OASIS</description>
  <maintainer email="eigendebugger@gmail.com">Garrett Brown</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>v4l2_camera</exec_depend>

  <!-- TODO: Tox depends
  <test_depend></test_depend>
  -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
